@@ -61,7 +61,7 @@ bool JackWaitThreadedDriver::Execute()
         return false;
     } catch (JackNetException& e) {
         e.PrintMessage();
-        jack_log("Driver is restarted");
+        jack_info("Driver is restarted");
         fThread.DropRealTime();
         // Thread in kIniting status again...
         fThread.SetStatus(JackThread::kIniting);
