@@ -183,7 +183,7 @@ JackOSSAdapter::JackOSSAdapter(jack_nframes_t buffer_size, jack_nframes_t sample
                 break;
                 
             case 'g':
-                fRingbufferSize = param->value.ui;
+                fAdaptative = false;
                 break;
 
            }
@@ -741,11 +741,11 @@ extern "C"
         i++;
         strcpy(desc->params[i].name, "ring-buffer");
         desc->params[i].character = 'g';
-        desc->params[i].type = JackDriverParamInt;
-        desc->params[i].value.ui = 32768;
-        strcpy(desc->params[i].short_desc, "Resampling ringbuffer size in frames (default = 32768, 0 for automatic mode)");
-        strcpy(desc->params[i].long_desc, "Resampling ringbuffer size in frames (default = 32768, 0 for automatic mode)");
-    
+        desc->params[i].type = JackDriverParamBool;
+        desc->params[i].value.i = false;
+        strcpy(desc->params[i].short_desc, "Fixed ringbuffer size");
+        strcpy(desc->params[i].long_desc, "Fixed ringbuffer size (false = automatic adaptative)");
+   
         return desc;
     }
    
