@@ -97,7 +97,7 @@ namespace Jack
                 fQuality = param->value.ui;
                 break;
             case 'g':
-                fRingbufferSize = param->value.ui;
+                fAdaptative = false;
                 break;
             }
         }
@@ -282,7 +282,7 @@ extern "C"
         strcpy(desc->params[i].name, "list-devices");
         desc->params[i].character = 'l';
         desc->params[i].type = JackDriverParamBool;
-        desc->params[i].value.i = TRUE;
+        desc->params[i].value.i = true;
         strcpy(desc->params[i].short_desc, "Display available PortAudio devices");
         strcpy(desc->params[i].long_desc, desc->params[i].short_desc);
 
@@ -297,10 +297,10 @@ extern "C"
         i++;
         strcpy(desc->params[i].name, "ring-buffer");
         desc->params[i].character = 'g';
-        desc->params[i].type = JackDriverParamInt;
-        desc->params[i].value.ui = 32768;
-        strcpy(desc->params[i].short_desc, "Resampling ringbuffer size in frames");
-        strcpy(desc->params[i].long_desc, "Resampling ringbuffer size in frames (default = 32768, 0 for automatic mode)");
+        desc->params[i].type = JackDriverParamBool;
+        desc->params[i].value.i = false;
+        strcpy(desc->params[i].short_desc, "Fixed ringbuffer size");
+        strcpy(desc->params[i].long_desc, "Fixed ringbuffer size (false = automatic adaptative)");
 
         return desc;
     }
