@@ -24,9 +24,13 @@ Torben Hohn
   Jackdmp changes log
 ---------------------------
 
+2009-03-12 Stephane Letz  <letz@grame.fr>
+
+        * Try automatic adaptative mode in adapters.
+
 2009-03-11 Stephane Letz  <letz@grame.fr>
 
-        * Client incorrect re-naming fixed: now done at socket level also.
+        * Client incorrect re-naming fixed : now done at socket level also.
 
 2009-03-10 Stephane Letz  <letz@grame.fr>
 
